--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "url": "https://jekiekolya.github.io/goit-js-hw-09/issues"
   },
   "dependencies": {
-    "@vimeo/player": "^2.17.1",
-    "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0",
-    "simplelightbox": "^2.10.3"
+    "flatpickr": "^4.6.13",
+    "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
